# modern-yolonas

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: detect_image.py  detect_video.py  detect_webcam.py  finetune_roboflow.ipynb
src/modern_yolonas/: __init__.py  _version.py  configs.py  model.py  weights.py
src/modern_yolonas/backbone/: __init__.py  backbone.py  spp.py  stage.py  stem.py
src/modern_yolonas/benchmarks/: rf100vl.py
src/modern_yolonas/cli/: __init__.py  benchmark_cmd.py  detect_cmd.py  eval_cmd.py  export_cmd.py  qat_cmd.py  quantize_cmd.py  train_cmd.py
src/modern_yolonas/data/: __init__.py  coco.py  collate.py  dataset_config.py  download.py  fiftyone.py  transforms.py  yolo.py
src/modern_yolonas/export/: frigate.py
src/modern_yolonas/head/: __init__.py  dfl.py
src/modern_yolonas/inference/: __init__.py  detect.py  postprocess.py  preprocess.py  visualize.py
src/modern_yolonas/neck/: __init__.py  pan.py
src/modern_yolonas/nn/: __init__.py  blocks.py  drop_path.py  repvgg.py
src/modern_yolonas/quantization/: __init__.py  calibrate.py  config.py  convert.py  prepare.py  qat_trainer.py
tests/: test_benchmark.py  test_data.py  test_fiftyone.py  test_inference.py  test_lightning.py  test_loss.py  test_model.py  test_quantization.py
tutorials/: export_onnx.ipynb  inference_onnx.ipynb  quantization_ptq.ipynb  quantization_qat.ipynb
tutorials/fiftyone/: 01_explore_dataset.ipynb  02_finetune.ipynb
tutorials/roboflow/: 01_explore_dataset.ipynb  02_finetune.ipynb
(+12 files in other folders)
