[project]
name = "modern-yolonas"
dynamic = ["version"]
description = "Modern YOLO-NAS object detection — clean reimplementation"
license = "MIT"
authors = [{name = "Luis Condados"}]
requires-python = ">=3.13"
dependencies = [
    "numpy>=1.24",
    "opencv-python-headless>=4.8",
    "pillow>=10.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "click>=8.1",
    "torch>=2.7",
    "torchvision>=0.22",
    "pycocotools>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4", "mypy>=1.0", "pre-commit", "roboflow>=1.2.13", "jupyter>=1.1.1"]
onnx = ["onnx>=1.14", "onnxruntime>=1.15", "onnxscript>=0.1"]
openvino = ["openvino>=2024.0"]

[project.scripts]
yolonas = "modern_yolonas.cli:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.hatch.build.hooks.vcs]
version-file = "src/modern_yolonas/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/modern_yolonas"]

[tool.ruff]
line-length = 120
target-version = "py313"

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.0",
]
